--- a/snmp/datadog_checks/snmp/data/profiles/dell-poweredge.yaml
+++ b/snmp/datadog_checks/snmp/data/profiles/dell-poweredge.yaml
@@ -2,7 +2,7 @@
 sysobjectid: 1.3.6.1.4.1.674.10892.1.*
 
 metrics:
-  - MIB: 10892
+  - MIB: MIB-Dell-10892
     table:
       OID: 1.3.6.1.4.1.674.10892.1.400.20
       name: operatingSystemMemoryTable 
@@ -19,7 +19,7 @@ metrics:
         name: operatingSystemMemoryAvailableVirtualSize
       - OID: 1.3.6.1.4.1.674.10892.1.400.20.1.11
         name: operatingSystemMemoryExtTotalPhysicalSize
-  - MIB: 10892
+  - MIB: MIB-Dell-10892
     table:
       OID: 1.3.6.1.4.1.674.10892.1.600.12
       name: powerSupplyTable
@@ -32,7 +32,52 @@ metrics:
         name: powerSupplyMaximumInputVoltage
       - OID: 1.3.6.1.4.1.674.10892.1.600.12.1.16
         name: powerSupplyCurrentInputVoltage
+  - MIB: MIB-Dell-10892
+    table:
+      OID: 1.3.6.1.4.1.674.10892.1.700.20
+      name: temperatureProbeTable
+    symbols:
+      - OID: 1.3.6.1.4.1.674.10892.1.700.20.1.5
+        name: temperatureProbeStatus
+      - OID: 1.3.6.1.4.1.674.10892.1.700.20.1.6
+        name: temperatureProbeReading
+  - MIB: MIB-Dell-10892
+    table:
+      OID: 1.3.6.1.4.1.674.10892.1.1100.50
+      name: memoryDeviceTable
+    symbols:
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.50.1.5
+        name: memoryDeviceStatus
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.50.1.20
+        name: memoryDeviceFailureModes
+  - MIB: MIB-Dell-10892
+    table:
+      OID: 1.3.6.1.4.1.674.10892.1.1100.90
+      name: networkDeviceTable
+    symbols:
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.90.1.3
+        name: networkDeviceStatus
+  - MIB: MIB-Dell-10892
+    table:
+      OID: 1.3.6.1.4.1.674.10892.1.1100.30
+      name: processorDeviceTable
+    symbols:
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.30.1.5
+        name: processorDeviceStatus
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.30.1.19
+        name: processorDeviceThreadCount
 
+  - MIB: MIB-Dell-10892
+    table:
+      OID: 1.3.6.1.4.1.674.10892.1.1100.40
+      name: cacheDeviceTable
+    symbols:
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.40.1.5
+        name: cacheDeviceStatus
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.40.1.12
+        name: cacheDeviceMaximumSize
+      - OID: 1.3.6.1.4.1.674.10892.1.1100.40.1.13
+        name: cacheDeviceCurrentSize
 
 
 
